--- a/earthquakes1.ipynb
+++ b/earthquakes1.ipynb
@@ -59,7 +59,8 @@
     "    # There are three coordinates, but we don't care about the third (altitude)\n",
     "    return (coordinates[0], coordinates[1])\n",
     "\n",
-    "\n",
+    "def annual_freq(data):\n",
+    "    \n",
     "def get_maximum(data):\n",
     "    \"\"\"Get the magnitude and location of the strongest earthquake in the data.\"\"\"\n",
     "    current_max_magnitude = get_magnitude(data[\"features\"][0])\n",
