completed function annual_freq

--- a/earthquakes1.ipynb
+++ b/earthquakes1.ipynb
@@ -8,6 +8,10 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import matplotlib.pyplot as plt\n",
+    "from datetime import datetime\n",
+    "from collections import Counter\n",
+    "\n",
     "# The Python standard library includes some functionality for communicating\n",
     "# over the Internet.\n",
     "# However, we will use a more powerful and simpler library called requests.\n",
@@ -60,7 +64,29 @@
     "    return (coordinates[0], coordinates[1])\n",
     "\n",
     "def annual_freq(data):\n",
+    "    times = [eq[\"properties\"][\"time\"] for eq in data[\"features\"]]\n",
+    "\n",
+    "    # Convert epoch times to years\n",
+    "    years = [datetime.utcfromtimestamp(t / 1000).year for t in times]\n",
+    "\n",
+    "    # Count how many earthquakes per year\n",
+    "    year_counts = Counter(years)\n",
+    "\n",
+    "    # Sort by year\n",
+    "    years_sorted = sorted(year_counts.keys())\n",
+    "    counts_sorted = [year_counts[y] for y in years_sorted]\n",
+    "\n",
+    "    # Plot histogram (bar chart)\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.bar(years_sorted, counts_sorted, color=\"skyblue\", edgecolor=\"black\")\n",
+    "    plt.xlabel(\"Year\")\n",
+    "    plt.ylabel(\"Number of Earthquakes\")\n",
+    "    plt.title(\"Annual Frequency of Earthquakes (2000–2018)\")\n",
+    "    plt.grid(axis=\"y\", linestyle=\"--\", alpha=0.6)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
     "    \n",
+    "\n",
     "def get_maximum(data):\n",
     "    \"\"\"Get the magnitude and location of the strongest earthquake in the data.\"\"\"\n",
     "    current_max_magnitude = get_magnitude(data[\"features\"][0])\n",
