--- a/earthquakes1.ipynb
+++ b/earthquakes1.ipynb
@@ -85,6 +85,39 @@
     "    plt.grid(axis=\"y\", linestyle=\"--\", alpha=0.6)\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
+    "\n",
+    "def average_magnitude_per_year(data):\n",
+    "    \"\"\"Compute and plot the average magnitude of earthquakes per year.\"\"\"\n",
+    "    # Dictionary to store magnitudes grouped by year\n",
+    "    yearly_mags = defaultdict(list)\n",
+    "\n",
+    "    # Iterate through all earthquakes\n",
+    "    for eq in data[\"features\"]:\n",
+    "        # Extract timestamp and convert to year\n",
+    "        timestamp = eq[\"properties\"][\"time\"]\n",
+    "        year = datetime.utcfromtimestamp(timestamp / 1000).year\n",
+    "        \n",
+    "        # Get the magnitude\n",
+    "        mag = get_magnitude(eq)\n",
+    "        if mag is not None:  # Some entries may have missing magnitudes\n",
+    "            yearly_mags[year].append(mag)\n",
+    "\n",
+    "    # Compute the average magnitude per year\n",
+    "    avg_mags = {year: sum(mags)/len(mags) for year, mags in yearly_mags.items() if len(mags) > 0}\n",
+    "\n",
+    "    # Sort by year\n",
+    "    years_sorted = sorted(avg_mags.keys())\n",
+    "    averages_sorted = [avg_mags[y] for y in years_sorted]\n",
+    "\n",
+    "    # Plot\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.plot(years_sorted, averages_sorted, marker='o', color='orange')\n",
+    "    plt.xlabel(\"Year\")\n",
+    "    plt.ylabel(\"Average Magnitude\")\n",
+    "    plt.title(\"Average Earthquake Magnitude per Year (2000–2018)\")\n",
+    "    plt.grid(True, linestyle=\"--\", alpha=0.6)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
     "    \n",
     "\n",
     "def get_maximum(data):\n",
